--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Project_SMCRT_Server_Interface/bin/
 Project_SMCRT_Server_Interface/obj/
 Project_SMCRT_Server/bin/
 Project_SMCRT_Server/obj/
+Project_SMCRT_Client/bin/
+Project_SMCRT_Client/obj/
